--- a/raven.cabal
+++ b/raven.cabal
@@ -25,7 +25,12 @@ source-repository head
 
 library
   exposed-modules:
+      Comment
+      Error
       Lib
+      Literal
+      Parsers
+      Type
   other-modules:
       Paths_raven
   hs-source-dirs:
@@ -33,6 +38,7 @@ library
   ghc-options: -Wall -Wcompat -Widentities -Wincomplete-record-updates -Wincomplete-uni-patterns -Wmissing-export-lists -Wmissing-home-modules -Wpartial-fields -Wredundant-constraints
   build-depends:
       base >=4.7 && <5
+    , parsec
   default-language: Haskell2010
 
 executable raven-exe
@@ -44,6 +50,7 @@ executable raven-exe
   ghc-options: -Wall -Wcompat -Widentities -Wincomplete-record-updates -Wincomplete-uni-patterns -Wmissing-export-lists -Wmissing-home-modules -Wpartial-fields -Wredundant-constraints -threaded -rtsopts -with-rtsopts=-N
   build-depends:
       base >=4.7 && <5
+    , parsec
     , raven
   default-language: Haskell2010
 
