--- a/package.yaml
+++ b/package.yaml
@@ -34,7 +34,9 @@ ghc-options:
 - -Wredundant-constraints
 
 library:
-  source-dirs: src
+  source-dirs: 
+    - src
+    - src/parsers
   dependencies:
     - parsec
 
