--- a/raven.cabal
+++ b/raven.cabal
@@ -62,7 +62,7 @@ executable raven-exe
 
 test-suite raven-test
   type: exitcode-stdio-1.0
-  main-is: Spec.hs
+  main-is: MainTest.hs
   other-modules:
       Paths_raven
   hs-source-dirs:
@@ -71,4 +71,7 @@ test-suite raven-test
   build-depends:
       base >=4.7 && <5
     , raven
+    , parsec
+    , tasty
+    , tasty-hunit
   default-language: Haskell2010
